4.x: Prettify class-model annotation rendering and support nested annotations (#11282)
* Pretty class-model annotation rendering

Render annotation over multiple lines if needed to make it prettier.
This is useful for annotation with deep nested data.

- Update class model to wrap io.helidon.common.types.Annotation to io.helidon.codegen.classmodel.Annotation to simplify the rendering logic.
- Fix AnnotationProperty to unwrap nested values correctly
- Deprecate AnnotationProperty.constantValue() for removal in favor of AnnotationProperty.value()
- Added tests

* Review feedback